--- a/index.html
+++ b/index.html
@@ -17,25 +17,8 @@
     <section>
         <h1>Memory card Game</h1>
         <h2>Rank: <span>Newbie</span></h2>
-        <div class="board">
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-            <div class="card"></div>
-        </div>
+        <div id="board"></div>
     </section>
-        
+    <script src="index.js" type="module"></script>
 </body>
 </html>
